--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-8NKZ6YG5S6');
+        gtag('config', 'G-S6Z6S1YMNH');
     </script>
 </head>
 <body>
