--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </style>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8NKZ6YG5S6"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S6Z6S1YMNH"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
