--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             padding: 40px 0px;
         }
         pre {
+            font-size: 11px;
             margin: 0 0 0.5rem;
         }
         a {
