Scale ascii font size with screen size

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
+        @media screen and (max-width: 767px) {
+            pre {
+                font-size: 11px;
+            }
+        }
+        @media screen and (min-width: 768px) {
+            pre {
+                font-size: 14px;
+            }
+        }
         body {
             background-color: #141414;
             color: #ffffff;
@@ -55,7 +65,6 @@
             padding: 40px 0px;
         }
         pre {
-            font-size: 11px;
             margin: 0 0 0.5rem;
         }
         a {
