--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         pre {
             margin: 0 0 0.5rem;
         }
-        a {
+        nav {
+            margin-bottom: 2rem;
+        }
+        nav a {
             color: #0c0c0c;
             background-color: #f8fafc;
             font-weight: 600;
@@ -81,7 +84,7 @@
             transition-timing-function: cubic-bezier(.4, 0, .2, 1);
             transition-duration: .15s;
         }
-        a:hover {
+        nav a:hover {
             background-color: #E0E3E5;
         }
         .github-icon {
@@ -93,6 +96,18 @@
             font-size: 14px;
             margin-bottom: 2rem;
             margin-top: 0;
+        }
+        .portfolio {
+            display: flex;
+            justify-content: center;
+        }
+        .portfolio a {
+            font-weight: 500;
+            font-size: 14px;
+            color: #32CD32;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            display: block;
         }
     </style>
 
@@ -122,6 +137,9 @@
         <nav>
             <a href="https://github.com/dataxapi" class="github"><i class="fa fa-github github-icon"></i>GitHub</a>
         </nav>
+        <div class="portfolio">
+            <a href="https://grokipedia-api.com">Grokipedia API --></a>
+        </div>
     </div>
 </body>
 </html>
