Clean meta tags

--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Basic SEO Meta Tags -->
-    <title>Grokipedia API - Unlock Full-Text for 885K+ Articles</title>
-    <meta name="description" content="Access full-text content, references & metadata from Grokipedia's 885K+ articles via REST API. Ideal for devs building AI tools, research & data pipelines.">
+    <title>Data-X Software Enginer</title>
+    <meta name="description" content="Data & Software Engineering">
     <meta name="author" content="Data-X">
-    <link rel="canonical" href="https://grokipedia-api.com">
+    <link rel="canonical" href="https://data-x.dev">
 
     <!-- Robots (allow indexing and following links) -->
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Grokipedia API">
-    <meta property="og:url" content="https://www.grokipedia-api.com">
-    <meta property="og:description" content="Unofficial API for xAI's Grokipedia (not affiliated).">
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
