Add project link to DOGE Insights

--- a/index.html
+++ b/index.html
@@ -95,17 +95,19 @@
             margin-bottom: 2rem;
             margin-top: 0;
         }
-        .portfolio {
+        /* .portfolio {
             display: flex;
             justify-content: center;
-        }
+        } */
         .portfolio a {
             font-weight: 500;
             font-size: 14px;
-            color: #32CD32;
             text-decoration: none;
             padding: 0.5rem 1rem;
             display: block;
+        }
+        .portfolio a:nth-of-type(1) {
+            margin-bottom: 0.25rem;
         }
     </style>
 
@@ -136,7 +138,8 @@
             <a href="https://github.com/dataxapi" class="github"><i class="fa fa-github github-icon"></i>GitHub</a>
         </nav>
         <div class="portfolio">
-            <a href="https://grokipedia-api.com">Grokipedia API --></a>
+            <a href="https://doge-insights.com" style="color:#32CD32">DOGE Insights --></a>
+            <a href="https://grokipedia-api.com" style="color:#636EFA">Grokipedia API --></a>
         </div>
     </div>
 </body>
