Add CryptoTab link

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         </nav>
         <div class="portfolio">
             <a href="https://doge-insights.com" style="color:#32CD32">DOGE Insights --></a>
+            <a href="https://cryptotab.app" style="color:#F7931A">CryptoTab --></a>
             <a href="https://grokipedia-api.com" style="color:#636EFA">Grokipedia API --></a>
         </div>
     </div>
